@@ -38,6 +38,8 @@
 <p>2019-04-13  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/render.c (DrawPrimitive): Check primitive point x/y
+values for NaN.</li>
 <li>magick/pixel_cache.c (SetNexus): Fix oss-fuzz issue 14208
 &quot;graphicsmagick/coder_MVG_fuzzer: Integer-overflow in SetNexus&quot;.</li>
 </ul>
